# ryra

./: .gitignore  .gitmodules  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  E2E_TEST_PLAN.md  LICENCE.md  README.md  install.sh  registry.json
crates/ryra/: Cargo.toml
crates/ryra-cli/: Cargo.toml
crates/ryra-cli/src/: main.rs
crates/ryra-cli/src/cli/: add.rs  apply.rs  config_cmd.rs  data.rs  diff.rs  expose.rs  info.rs  init.rs  linger.rs  list.rs  ls.rs  mod.rs  prompts.rs  registry.rs  registry_cmd.rs  remove.rs  reset.rs  revert.rs  rm.rs  search.rs  status.rs  style.rs  sysctl_low_ports.rs  test.rs  update.rs  upgrade.rs
crates/ryra-core/: Cargo.toml  build.rs
crates/ryra-core/registry/authelia/: service.toml  test.toml
crates/ryra-core/registry/authelia/quadlets/: authelia.container  authelia.network
crates/ryra-core/registry/caddy/: test.toml
crates/ryra-core/registry/caddy/quadlets/: caddy.network
crates/ryra-core/registry/docuseal/: service.toml  test.toml
crates/ryra-core/registry/docuseal/quadlets/: docuseal.network
crates/ryra-core/registry/forgejo/: service.toml  test.toml
crates/ryra-core/registry/forgejo/quadlets/: forgejo.network
crates/ryra-core/registry/immich/: service.toml
crates/ryra-core/registry/immich/quadlets/: immich.container  immich.network
crates/ryra-core/registry/immich/tests/: playwright.config.ts
crates/ryra-core/registry/inbucket/: service.toml
crates/ryra-core/registry/inbucket/quadlets/: inbucket.container
crates/ryra-core/registry/minio/: service.toml  test.toml
crates/ryra-core/registry/minio/quadlets/: minio.container  minio.network
crates/ryra-core/registry/nextcloud/: service.toml  test.toml
crates/ryra-core/registry/nextcloud/quadlets/: nextcloud-postgres.container  nextcloud.container  nextcloud.network
crates/ryra-core/registry/openclaw/quadlets/: openclaw.container
crates/ryra-core/registry/paperless-ngx/: service.toml
crates/ryra-core/registry/paperless-ngx/quadlets/: paperless-ngx.container  paperless-ngx.network
crates/ryra-core/registry/seafile/: service.toml  test.toml
crates/ryra-core/registry/seafile/quadlets/: seafile-mariadb.container  seafile.container  seafile.network
crates/ryra-core/registry/seafile/tests/: auth.spec.ts  playwright.config.ts
crates/ryra-core/registry/supabase/: service.toml  test.toml
crates/ryra-core/registry/supabase/quadlets/: supabase-rest.container  supabase-supavisor.container  supabase.container  supabase.network
crates/ryra-core/registry/synapse/: service.toml
crates/ryra-core/registry/synapse/configs/: element-config.json.tpl  element-nginx.conf  homeserver.yaml.tpl  oidc.yaml.tpl
crates/ryra-core/registry/synapse/quadlets/: synapse-homeserver.container  synapse.network
crates/ryra-core/registry/tests/: backup-minio-seafile.toml  backup-minio.toml  configure-auth.toml  configure.toml
crates/ryra-core/registry/tests/browser/: forgejo-auth.spec.ts  immich-auth.spec.ts  seafile-auth.spec.ts  synapse-auth.spec.ts  vikunja-auth.spec.ts  zammad-auth.spec.ts
crates/ryra-core/registry/twenty/: service.toml
crates/ryra-core/registry/twenty/quadlets/: twenty-postgres.container  twenty-redis.container  twenty.container
crates/ryra-core/registry/uptime-kuma/: service.toml  test.toml
crates/ryra-core/registry/uptime-kuma/quadlets/: uptime-kuma.container
crates/ryra-core/registry/vaultwarden/: service.toml  test.toml
crates/ryra-core/registry/vikunja/: service.toml  test.toml
crates/ryra-core/registry/vikunja/quadlets/: vikunja.container  vikunja.network
crates/ryra-core/registry/zammad/: service.toml  test.toml
crates/ryra-core/registry/zammad/quadlets/: zammad-memcached.container  zammad-postgres.container  zammad-railsserver.container  zammad-redis.container  zammad-websocket.container
crates/ryra-core/src/: auth_bridge.rs  authelia.rs  backup.rs  caddy.rs  capability.rs  configure.rs  deploy.rs  diff.rs  error.rs  exposure.rs  from_protocol.rs  lib.rs  manifest.rs  metadata.rs  metrics_bridge.rs  ops.rs  paths.rs  plan.rs  prometheus.rs  protocol.rs  scope.rs  tailscale_sidecar.rs  to_protocol.rs  upgrade.rs  verbose.rs  well_known.rs
crates/ryra-core/src/config/: mod.rs  schema.rs  state.rs  status.rs
crates/ryra-core/src/data/: classify.rs  mod.rs  volumes.rs
crates/ryra-core/src/generate/: blueprint.rs  bundle.rs  context.rs  mod.rs  nginx.rs  quadlet.rs  template.rs  tunnel.rs
crates/ryra-core/src/integrations/: dns.rs  mod.rs  ssl.rs  tailscale.rs  tunnel.rs
crates/ryra-core/src/registry/: bundled.rs  fetch.rs  manage.rs  mod.rs  resolve.rs  service_def.rs  test_def.rs
crates/ryra-core/src/system/: account.rs  apply.rs  atomic_write.rs  doctor.rs  memory.rs  mod.rs  nginx.rs  podman.rs  port.rs  preflight.rs  secret.rs  sysctl.rs  tailscale.rs
crates/ryra-core/tests/: backup_e2e.rs  blue_green_e2e.rs
crates/ryra-dev-tools/: Cargo.toml
crates/ryra-dev-tools/src/: generate_registry.rs
crates/ryra-dev-tools/tests/: json_roundtrip.rs
crates/ryra-protocol/: Cargo.toml
crates/ryra-protocol/src/: lib.rs
crates/ryra-test/: Cargo.toml
crates/ryra-test/src/: assert.rs  executor.rs  image.rs  lib.rs  machine.rs  main.rs  registry.rs  reports.rs  runner.rs  scenario.rs  test_toml.rs
crates/ryra-vm/: Cargo.toml
crates/ryra-vm/src/: assert.rs  image.rs  lib.rs  machine.rs  ports.rs  progress.rs
crates/ryra/src/: main.rs
crates/ryra/src/cli/: account.rs  add.rs  apply.rs  backup.rs  config_cmd.rs  configure.rs  configure_global.rs  diff.rs  doctor.rs  init.rs  lifecycle.rs  linger.rs  list.rs  lock.rs  mod.rs  prompts.rs  remove.rs  reset.rs  revert.rs  rpc.rs  search.rs  status.rs  tailscale_sudoers.rs  test.rs  upgrade.rs
design/: backup-fleet.md  safe-upgrades.md
tests/e2e/: Cargo.toml
tests/e2e/fixtures/registry/postgres/: service.toml
tests/e2e/fixtures/registry/tests/: whoami-postgres.toml
tests/e2e/fixtures/registry/whoami/: service.toml
tests/e2e/src/: assert.rs  image.rs  machine.rs  main.rs  registry.rs  runner.rs  scenario.rs
tests/e2e/src/tests/: mod.rs
(+379 files in other folders)
