[workspace]
members = ["crates/ryra-core", "crates/ryra-cli", "crates/ryra-vm", "crates/ryra-test"]
resolver = "3"
default-members = ["crates/ryra-cli"]

[workspace.package]
edition = "2024"
description = "A tool to test and deploy self-hosted services on a Linux server using rootless Podman and systemd. Built-in VM testing gives AI agents fast feedback loops for building infrastructure and deploying apps."
license = "AGPL-3.0-or-later"
repository = "https://github.com/ryanravn/ryra"
homepage = "https://ryra.dev"
authors = ["Erlend Ravn Ryan <erlendryan@pm.me>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
thiserror = "2"
anyhow = "1"
