[workspace]
members = ["crates/ryra-core", "crates/ryra", "crates/ryra-vm", "crates/ryra-test"]
# The registry is a separate repo (submodule) of service definitions, some of
# which are standalone Rust crates ryra builds in place. Keep the whole registry
# out of ryra's own cargo workspace so those build independently, exactly as a
# user's service would when its registry is cloned on its own.
exclude = ["registry"]
resolver = "3"
default-members = ["crates/ryra"]

[workspace.package]
version = "0.7.3"
edition = "2024"
description = "A tool to test and deploy self-hosted services on a Linux server using rootless Podman and systemd. Built-in VM testing gives AI agents fast feedback loops for building infrastructure and deploying apps."
license = "AGPL-3.0-or-later"
repository = "https://github.com/ryanravn/ryra"
homepage = "https://ryra.dev"
authors = ["Erlend Ravn Ryan <erlendryan@pm.me>"]
keywords = ["self-hosting", "podman", "systemd", "cli", "linux"]
categories = ["command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
thiserror = "2"
anyhow = "1"
