[package]
name = "ryra-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["e2e-tests"]
e2e-tests = ["dep:ryra-test"]

[dependencies]
ryra-core = { path = "../ryra-core" }
ryra-test = { path = "../ryra-test", optional = true }
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
