[package]
name = "ryra-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ryra"
path = "src/main.rs"

[package.metadata.deb]
name = "ryra"
maintainer = "Erlend Ravn Ryan <erlendryan@pm.me>"
section = "utils"
priority = "optional"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/ryra", dest = "/usr/bin/ryra", mode = "0755" }]

[dependencies]
ryra-core = { path = "../ryra-core" }
ryra-test = { path = "../ryra-test" }
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
serde_json = "1.0.149"
