[package]
name = "ryra-core"
version = "0.1.0"
edition.workspace = true
description = "Core library for ryra — config, registry, and service generation logic"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1"
toml.workspace = true
tokio.workspace = true
thiserror.workspace = true
minijinja = "2"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
