[package]
name = "ryra-core"
version.workspace = true
edition.workspace = true
description = "Core library for ryra: config, registry, and service generation logic"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
ryra-protocol = { path = "../ryra-protocol", version = "0.9.4" }
serde.workspace = true
serde_json = "1"
toml.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
minijinja = "2"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
url = "2"

[dev-dependencies]
tempfile = "3"
