[package]
name = "ryra-dev-tools"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Build tooling for ryra — registry generation and dev utilities"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "generate-registry"
path = "src/generate_registry.rs"

[dependencies]
ryra-core = { path = "../ryra-core" }
serde.workspace = true
serde_json = "1"
anyhow.workspace = true
