[package]
name = "ryra-test"
version = "0.1.0"
edition.workspace = true
publish = false
description = "E2E test runner for ryra using ephemeral QEMU VMs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "ryra_test"
path = "src/lib.rs"

[dependencies]
ryra-vm = { path = "../ryra-vm" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["sync", "time", "net", "fs", "signal"] }
serde.workspace = true
toml.workspace = true
libc = "0.2"
