[package]
name = "ryra-vm"
version.workspace = true
edition.workspace = true
description = "VM orchestration library for ryra E2E tests (QEMU + Apple Virtualization)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["virtualization"]

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "fs", "signal", "io-util"] }
rand = "0.9"
dirs = "6"
libc = "0.2"
