[package]
name = "ryra"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[package.metadata.deb]
name = "ryra"
maintainer = "Erlend Ravn Ryan <erlendryan@pm.me>"
section = "utils"
priority = "optional"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/ryra", dest = "/usr/bin/ryra", mode = "0755" }]

[dependencies]
ryra-core = { path = "../ryra-core", version = "0.2.0" }
ryra-test = { path = "../ryra-test", version = "0.2.0" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
url = "2"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
serde_json = "1.0.149"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
which = "6"
dirs = "6"
