[package]
name = "ryra-e2e"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ryra-e2e"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "net", "fs"] }
rand = "0.9"
dirs = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
